@@ -996,6 +996,7 @@ USING
 - getCompoundType;
 - getClass;
 
+- (BOOL)checkName: (const char *)groupName;
 - loadDataset: (void *)ptr;
 - storeAsDataset: (const char *)name typeName: (const char *)typeName type: (const char *)type ptr: (void *)ptr;
 - storeTypeName: (const char *)typeName;
