@@ -1,3 +1,10 @@
+1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* HDF5Object.[hm], defobj.h ([HDF5_c -checkName:]): New method.
+
+	* Archiver.m (hdf5_output_objects): Split deep / shallow handling
+	in to two different clauses.
+
 1999-01-19  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* HDF5Object.[hm] ([HDF5_c -readRowNames]), defobj.h: New method.
